--- a/css/app.css
+++ b/css/app.css
@@ -38,31 +38,36 @@ h1 {
  */
 
 .deck {
-    width: 660px;
-    min-height: 680px;
-    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
-    padding: 32px;
-    border-radius: 10px;
-    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 0 3em;
+  max-width: 660px;
+  max-height: 660px;
+  width: 85vw;
+  height: 85vw;
+  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+  border-radius: 10px;
+  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  padding: 0;
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
-    background: #2e3d49;
-    font-size: 0;
-    color: #ffffff;
-    border-radius: 8px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+  max-width: 122px;
+  max-height: 122px;
+  width: 16vw;
+  height: 16vw;
+  margin: 2%;
+  list-style: none;
+  background: #2e3d49;
+  color: #ffffff;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
 
 .deck .card.open {
@@ -72,38 +77,99 @@ h1 {
 }
 
 .deck .card.show {
-    font-size: 33px;
+    font-size: 22px;
 }
 
 .deck .card.match {
     cursor: default;
     background: #02ccba;
-    font-size: 33px;
+    font-size: 22px;
 }
 
 /*
  * Styles for the Score Panel
  */
 
-.score-panel {
-    text-align: left;
-    width: 345px;
-    margin-bottom: 10px;
-}
+ .score-panel {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    max-width: 660px;
+    margin-bottom: 30px;
+ }
 
-.score-panel .stars {
+ .score-panel .stars {
     margin: 0;
     padding: 0;
-    display: inline-block;
-    margin: 0 5px 0 0;
-}
+    display: flex;
+    justify-content: center;
+ }
 
-.score-panel .stars li {
+ .score-panel .stars li {
     list-style: none;
-    display: inline-block;
-}
+    margin-left: 5px;
+ }
 
-.score-panel .restart {
-    float: right;
-    cursor: pointer;
-}
+/*
+ * Styles for the Modal
+ */
+
+ .modal {
+     display: none;
+     position: fixed;
+     z-index: 1;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     background-color: rgb(0,0,0);
+     background-color: rgba(0,0,0,0.6);
+ }
+
+ .modal-content {
+   background-color: #c9f4ff;
+   opacity: 0.8;
+   margin: 40% auto;
+   padding: 30px;
+   border: 1px solid #888;
+   text-align: center;
+   width: 90%;
+ }
+
+ .modal-header h2 {
+   margin: 0;
+ }
+
+ .modal-footer button {
+   background-color: #8e90c1;
+   font-size: 150%;
+   cursor: pointer;
+   color: #19161b;
+
+ }
+
+ .close {
+   color: #8e90c1;
+   float: right;
+   font-size: 28px;
+   font-weight: bold;
+ }
+
+ .close:hover,
+ .close:focus {
+   color: black;
+   text-decoration: none;
+   cursor: pointer;
+ }
+
+
+
+ @media screen and (min-width:900px) {
+   /*
+    * Styles for the Modal
+    */
+
+    .modal-content {
+      width: 40%;
+    }
+  }
